Fixed Chrome overflow scroll issue on Knowledge Base - Fixed scroll happening on pages that don't require scroll (kanban, projects)

--- a/Project-Kanban/kanban.css
+++ b/Project-Kanban/kanban.css
@@ -1,7 +1,7 @@
 
 /*====Project Information====*/
 #kanban-content {
-    height: 100dvh;
+    height: auto;
 }
 
 .project-intro {
