--- a/Projects/projects.css
+++ b/Projects/projects.css
@@ -1,6 +1,6 @@
 /*====Project Information====*/
 #project-content {
-    height: 100dvh;
+    height: auto;
 }
 
 .project-intro {
