--- a/navbar.css
+++ b/navbar.css
@@ -263,7 +263,7 @@ nav {
     background-color: #F5F5F5;
     padding-left: 1.2rem;
     padding-top: 4rem;
-    height: 100dvh;
+    height: 94dvh;
 
 }
 
@@ -460,7 +460,7 @@ nav {
 
 /*====Nav Bar Section Content====*/
 #content {
-    height: 100dvh;
+    height: 94.8dvh;
     width: 84%;
     border-radius: 45px;
     background-color: #f5f5f5;
